--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,17 +2,15 @@
   color: black;
   position: relative;
   background: white;
-  width: 350px;
-  height: 300px;
+  width: 567px;
+  height: 248px;
   display: flex;
   flex-direction: column;
   border-radius: 6px;
-  //overflow: hidden;
-  > header,
-  > div {
-    flex: 1;
+  overflow: hidden;
+  > * {
+    flex: 1 50%;
   }
-
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   text-rendering: optimizeLegibility;
@@ -199,8 +197,7 @@
   user-select: none;
   display: block;
   --img-size: 130px;
-  height: 248px;
-  max-width: 567px;
+
   min-width: min(calc(100% - 4px), 260px);
   background-color: var(--white-color);
   direction: rtl;
@@ -208,6 +205,19 @@
   border: solid 0.5px var(--seperator-color);
   box-shadow: var(--card-shadow-2);
   --card-size: 100%;
+
+  width: 100%;
+  height: 248px;
+  max-width: 567px;
+}
+
+.CardContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  width: 100%;
+  align-items: center;
 }
 .banner {
   object-fit: cover;
