remove some unused styles

--- a/src/app/components/CardSkeleton/CardSkeleton.module.scss
+++ b/src/app/components/CardSkeleton/CardSkeleton.module.scss
@@ -3,7 +3,6 @@
   height: 248px;
   background: white;
 
-  font-family: "iransans";
   font-size: var(--text-small);
   --header-size: 162px;
   color: inherit;
@@ -32,23 +31,22 @@
 
 .skeleton {
   border-radius: 6px;
-  background-color: #f5f5f5; /* Background color of the skeleton */
-  animation: skeleton-loading 1s infinite ease-in-out; /* Animation properties */
+  background-color: #f5f5f5;
+  animation: skeleton-loading 1s infinite ease-in-out;
 }
 
 @keyframes skeleton-loading {
   0% {
-    background-color: #f5f5f5; /* Background color of the skeleton */
+    background-color: #f5f5f5;
   }
   50% {
-    background-color: #e8e8e8; /* Background color of the skeleton while animating */
+    background-color: #e8e8e8;
   }
   100% {
-    background-color: #f5f5f5; /* Background color of the skeleton */
+    background-color: #f5f5f5;
   }
 }
 
-/* Customize the skeleton size, width, height, and margin as needed */
 .skeleton {
   width: 100%;
   height: 20px;
