--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --text-small: 12px;
+  --card-shadow: rgba(0, 0, 0, 0.1);
+  --card-shadow-1: 0 2px 8px 0 var(--card-shadow);
   --card-shadow-2: 0 2px 12px 0 var(--card-shadow);
   --card-shadow-3: 0 2px 6px 0 var(--card-shadow);
   --text-color: #404040;
@@ -18,13 +20,4 @@
   --text-color-light: #a3a3a3;
   --dark-bilbao-color: rgba(63, 126, 0, 0.08);
   --starcolor-default: #305d02;
-
-  
-
-
-
 }
-
- 
-
- 
